finish organizing sections

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap");
 @import url("./colors.css");
 @font-face {
@@ -7,12 +6,11 @@
   font-weight: 700;
   font-style: normal;
 }
-section {
-  min-height: 100%;
+nav ul {
   width: 100%;
-  border: 5px solid purple;
   box-sizing: border-box;
-  overflow: auto;
+  margin: 0;
+  padding: 0;
 }
 
 body,
@@ -28,390 +26,52 @@ body {
   background-position: center left 6vw, center right 6vw;
   background-repeat: no-repeat;
   background-size: auto clamp(400px, 60vh, 800px);
+  color: var(--text-color);
   margin: 0;
 }
 body #root {
   display: flex;
   flex-direction: column;
 }
-body,
-body button,
-body input,
-body select,
-body textarea {
-  color: var(--bg-color);
-  font-family: "PT Sans Narrow", Helvetica, Arial, sans-serif;
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 1.5rem;
-}
-body button,
-body input,
-body textarea {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border: 0;
-  border-radius: 0;
-}
-body input,
-body textarea {
-  background-color: var(--text-color);
-}
-body button {
-  text-align: center;
-}
-body input[type=checkbox]:hover,
-body label:hover,
-body select:hover {
-  cursor: pointer;
-}
-body input[type=checkbox] {
-  height: 15px;
-  width: 15px;
-  border-radius: 5px;
-}
-body input[type=checkbox]:checked {
-  background-color: var(--accent-color) !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-body input[type=checkbox]:checked::before {
-  content: "✓";
-  font-weight: 700;
-  font-size: 15px;
-}
-body label {
-  width: -moz-fit-content;
-  width: fit-content;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-  line-height: 0;
-  margin: auto;
-}
-body a[href^="mailto:"] {
-  text-decoration: none;
-}
-body a,
-body .link-btn {
-  background-color: transparent;
-  color: var(--accent-color);
-  font-weight: 700;
-  text-decoration: underline;
-  padding: 0;
-}
-body a:hover,
-body .link-btn:hover {
-  color: var(--accent-color-2);
-  cursor: pointer;
-}
-body .standard-btn {
-  min-height: 35px;
-  min-width: 90px;
-  box-sizing: border-box;
-  font-weight: 700;
-  padding: 0 12px;
-}
-body summary.standard-btn {
-  width: 180px;
-  color: var(--bg-color);
-  margin: auto;
-}
-body .standard-btn,
-body nav li {
-  background-color: var(--accent-color);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-body .standard-btn:hover,
-body nav li:hover {
-  background-color: var(--accent-color-2);
-  cursor: pointer;
-}
-body textarea {
-  height: 80px;
-  max-width: 320px;
-  width: 100%;
-  box-sizing: border-box;
-}
 
-#alternative-page {
+#home,
+#reading {
   height: 100%;
   width: 100%;
-  overflow: auto;
-}
-#alternative-page .container {
-  max-width: 800px;
-  min-height: 100%;
-  box-sizing: border-box;
-  color: var(--text-color);
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 0 auto;
-  padding: 90px 15px;
-  text-align: center;
-}
-#alternative-page .container#custom-spread, #alternative-page .container.settings {
-  gap: 25px;
-}
-#alternative-page .container.settings {
-  margin: auto;
-}
-#alternative-page .container.settings button {
-  width: 150px;
-}
-
-.symbolize {
-  min-height: 40px;
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-  justify-content: center;
-  font-size: 30px;
-  font-weight: bold;
-  color: var(--accent-color-2);
-}
-.symbolize span {
-  font-size: initial;
-  font-weight: normal;
-}
-
-header nav {
-  height: 35px;
-}
-header nav ul {
-  height: 100%;
-  display: flex;
-  list-style-type: none;
-  gap: 5px;
-  margin: 0;
-  padding: 0;
-}
-header nav ul li {
-  flex: 1;
-  font-size: 15px;
-  font-weight: 700;
-  line-height: 1rem;
-}
-header nav ul li.highlighted {
-  background-color: transparent;
-  color: var(--text-color);
-}
-
-main {
-  display: flex;
-  flex: 1;
-  overflow: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   scroll-snap-type: x mandatory;
 }
 
-h1,
-h2 {
-  font-family: "Norse Bold", "Times New Roman", Times, serif;
-  margin: 0;
-}
-
-h1 {
-  color: var(--accent-color-2);
-  font-size: 3rem;
-  line-height: 3rem;
-  text-align: center;
-}
-
-h2 {
-  color: var(--accent-color);
-  font-size: 1.7rem;
-  line-height: 2rem;
-}
-h2.bigger-header {
-  font-size: 2.4rem;
-  line-height: 2.7rem;
-}
-
-.slide {
-  height: 100%;
-  min-width: 100vw;
+#home section,
+#reading .slide {
+  max-width: 100%;
+  min-width: 100%;
   box-sizing: border-box;
-  color: var(--text-color);
+  color: #eee;
+  overflow-x: hidden;
   overflow-y: auto;
-  padding: 60px 15px 80px;
   scroll-snap-align: start;
 }
-.slide .slide-container {
-  max-width: 800px;
-  width: 100%;
+
+#home section#ask {
   display: flex;
-  align-items: center;
   flex-direction: column;
-  gap: 25px;
-  margin: auto;
-}
-.slide .slide-container > *:not(h1):not(h2.bigger-header) {
-  margin: 0;
-  text-align: center;
 }
 
-#card-images {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
+#root,
+#reading {
+  position: relative;
 }
-#card-images .card-info {
-  width: 120px;
-  background-color: var(--box-bg-color);
-  font-size: 14px;
-  line-height: 18px;
-  padding: 5px;
-}
-#card-images .card-info .card-name {
-  font-weight: 700;
-}
-
-.card-image {
-  height: 200px;
-  max-width: 120px;
-  width: 100%;
-}
-.card-image.reversed {
-  transform: rotate(180deg);
-}
-
-img.separator {
-  height: auto;
-  width: 150px;
-  margin: auto;
-  padding: 40px 0;
-}
-
-#compare-tables {
-  width: 100%;
-  display: flex;
-  gap: 25px;
-  justify-content: center;
-}
-#compare-tables .compare {
-  max-width: 320px;
-  box-sizing: border-box;
-  flex: 1;
-}
-#compare-tables .compare#opposites .spacer-row {
-  height: 8px;
-  background-color: transparent;
-}
-#compare-tables .compare h3 {
-  margin-top: 0;
-}
-#compare-tables .compare table {
-  width: 100%;
-}
-#compare-tables .compare table td {
-  background-color: var(--box-bg-color);
-  padding: 2px 5px;
-}
-#compare-tables .compare table td:first-child {
-  font-weight: 700;
-}
-#compare-tables .compare table td.unlike-row {
-  background-color: rgba(250, 250, 250, 0.6);
-  color: var(--bg-color);
-  font-size: 0.85rem;
-  font-weight: 700;
-}
-
-details {
-  width: 100%;
-}
-details[open] summary {
-  display: none;
-}
-details > summary {
-  list-style: none;
-}
-details > summary::-webkit-details-marker {
-  display: none;
-}
-
-.subscribe-form {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-.subscribe-form img.stripe-logo {
-  width: 125px;
-  margin-top: 20px;
-}
-.subscribe-form .payment-input-wrapper {
-  border-bottom: 2px solid #333;
-  margin-bottom: 12.5px;
-}
-.subscribe-form .payment-input-wrapper:first-child input {
-  height: 19.2px;
-  padding: 0;
-}
-.subscribe-form .payment-input-wrapper:first-child input:focus {
-  outline: none;
-}
-.subscribe-form .payment-input-wrapper input {
-  width: 100%;
-  color: var(--text-color);
-  background-color: transparent;
-  font-size: 16px;
-  font-family: "Courier New";
-  text-align: center;
-}
-.subscribe-form .payment-input-wrapper input::-moz-placeholder {
-  color: #888;
-}
-.subscribe-form .payment-input-wrapper input::placeholder {
-  color: #888;
-}
-
-ul.words-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-  list-style-type: none;
-  padding: 0;
-}
-ul.words-list li {
-  background-color: var(--box-bg-color);
-  border: 1px solid var(--accent-color);
-  border-radius: 8px;
-  font-weight: 700;
-  padding: 5px 10px;
-}
-
-#user-options {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-}
-
-.wait {
-  font-style: italic;
+#root nav,
+#reading nav {
+  position: sticky;
+  top: 0;
 }
 
 @media only screen and (max-width: 600px) {
   body {
     background-position: center left, center right;
     background-size: auto clamp(350px, 50vh, 500px);
-  }
-  #compare-tables {
-    flex-wrap: wrap;
-  }
-  #compare-tables .compare {
-    width: 100%;
-    flex: auto;
   }
 }/*# sourceMappingURL=style.css.map */
