--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -4,4 +4,6 @@
     --text-color: #f6ecdb;
     --accent-color: #f8bf6a;
     --accent-color-2: #b8d7dc;
+    --home-menu-color: #324f96;
+    --questions-button-color: rgba(50, 79, 150, 0.5);
 }
