--- a/src/css/style.css
+++ b/src/css/style.css
@@ -87,6 +87,26 @@ h2.bigger-header {
   line-height: 2.7rem;
 }
 
+.vertical-center {
+  display: flex;
+}
+.vertical-center#dashboard .container {
+  gap: 35px;
+}
+.vertical-center#dashboard .container > * {
+  margin: 0 auto;
+}
+.vertical-center#account .container {
+  gap: 30px;
+}
+.vertical-center .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
 #home,
 #reading {
   height: 100%;
@@ -390,6 +410,18 @@ ul.words-list li {
   display: flex;
   gap: 6px;
   justify-content: center;
+}
+
+.description {
+  max-width: 650px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 15px;
+  color: var(--bg-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.5rem;
+  margin: 15px auto;
+  padding: 15px;
 }
 
 .tol {
