--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -103,6 +103,34 @@ h2 {
 
 // SCROLLING & SLIDES
 
+.vertical-center {
+    display: flex;
+
+    &#dashboard {
+        .container {
+            gap: 35px;
+
+            & > * {
+                margin: 0 auto;
+            }
+        }
+    }
+
+    &#account {
+        .container {
+            gap: 30px;
+        }
+    }
+
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex: 1;
+    }
+}
+
 #home,
 #reading {
     height: 100%;
@@ -468,6 +496,18 @@ ul.words-list {
 }
 
 // MISC
+
+.description {
+    max-width: 650px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 15px;
+    color: var(--bg-color);
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.5rem;
+    margin: 15px auto;
+    padding: 15px;
+}
 
 .tol {
     flex: none;
