--- a/src/css/style.css
+++ b/src/css/style.css
@@ -427,6 +427,10 @@ ul.words-list li {
   flex: none;
 }
 
+#sign-in-error {
+  color: salmon;
+}
+
 .symbolize {
   min-height: 40px;
   display: flex;
