--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -512,6 +512,10 @@ ul.words-list {
     flex: none;
 }
 
+#sign-in-error {
+    color: salmon;
+}
+
 .symbolize {
     min-height: 40px;
     display: flex;
