--- a/deploy/css/landing.css
+++ b/deploy/css/landing.css
@@ -43,6 +43,10 @@ h1 span {
   margin: 0 5px;
 }
 
+img.separator {
+  margin: 40px auto;
+}
+
 #intro p {
   font-size: 1.4rem;
   font-weight: 700;
@@ -65,18 +69,4 @@ h1 span {
 small {
   display: inline-block;
   line-height: 20px;
-}
-
-.link-btn {
-  background-color: #eee;
-  color: var(--home-menu-color);
-  display: inline-block;
-  padding: 15px;
-  border: 1px solid #222;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
-}
-.link-btn:hover {
-  background-color: var(--accent-color);
-  color: var(--home-menu-color);
 }/*# sourceMappingURL=landing.css.map */
