--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -68,6 +68,10 @@ body {
         margin-right: auto;
     }
 
+    button {
+        color: #222;
+    }
+
     #root {
         display: flex;
         flex-direction: column;
@@ -221,6 +225,7 @@ input[type="checkbox"] {
     appearance: none;
     background-color: #eee;
     border-radius: 5px;
+    margin-right: $gap;
 
     &:checked {
         background-color: var(--accent-color);
