--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -14,7 +14,7 @@ h1 span {
   margin-bottom: 0;
 }
 
-#disclaimer p,
+.landing-section p,
 #intro p,
 #unpaid-vs-paid td,
 #unpaid-vs-paid th {
@@ -22,21 +22,21 @@ h1 span {
   box-sizing: border-box;
 }
 
-#disclaimer,
+.landing-section,
 #intro,
 #unpaid-vs-paid {
   width: 100%;
   max-width: 500px !important;
 }
 
-#disclaimer p,
+.landing-section p,
 #intro p,
 #unpaid-vs-paid td {
   background-color: var(--home-menu-color);
   color: #eee;
 }
 
-#disclaimer p,
+.landing-section p,
 #intro p {
   box-sizing: border-box;
   padding: 15px 10px;
