--- a/deploy/css/static.css
+++ b/deploy/css/static.css
@@ -3,14 +3,16 @@ body {
   min-height: 100%;
   box-sizing: border-box;
   overflow-x: hidden;
-  padding: 80px 15px;
+  padding: 0;
   text-align: center;
 }
 body main .container {
+  box-sizing: border-box;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
   gap: 35px;
+  padding: 80px 15px 0;
 }
 body main .container h3 {
   margin-top: 30px;
@@ -25,6 +27,50 @@ body main .container table {
   margin: 0 auto 30px;
 }
 
+footer {
+  background-color: #111;
+  margin-top: 80px;
+  position: relative;
+  z-index: 10;
+}
+footer #footer-container {
+  max-width: 500px;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  padding: 20px 25px;
+}
+footer #footer-container ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: left;
+}
+footer #footer-container ul li a {
+  color: var(--accent-color-2);
+  font-size: 15px;
+  font-weight: 400;
+}
+footer #footer-container ul li a:hover {
+  color: var(--accent-color);
+}
+footer #footer-container .social {
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 0;
+  padding-top: 0;
+}
+footer #footer-container .social img {
+  margin-top: 0;
+}
+
 nav {
   position: relative;
+}
+
+@media only screen and (max-width: 300px) {
+  nav ul li a {
+    font-size: 13px;
+  }
 }/*# sourceMappingURL=static.css.map */
