--- a/deploy/css/static.scss
+++ b/deploy/css/static.scss
@@ -3,15 +3,17 @@ body {
     min-height: 100%;
     box-sizing: border-box;
     overflow-x: hidden;
-    padding: 80px 15px;
+    padding: 0;
     text-align: center;
 
     main {
         .container {
+            box-sizing: border-box;
             display: flex;
-            flex-direction: column;
             align-items: center;
+            flex-direction: column;
             gap: 35px;
+            padding: 80px 15px 0;
 
             h3 {
                 margin-top: 30px;
@@ -32,6 +34,64 @@ body {
     }
 }
 
+footer {
+    background-color: #111;
+    margin-top: 80px;
+    position: relative;
+    z-index: 10;
+
+    #footer-container {
+        max-width: 500px;
+        width: 100%;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: space-between;
+        margin: auto;
+        padding: 20px 25px;
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+            text-align: left;
+
+            li {
+                a {
+                    color: var(--accent-color-2);
+                    font-size: 15px;
+                    font-weight: 400;
+
+                    &:hover {
+                        color: var(--accent-color);
+                    }
+                }
+            }
+        }
+
+        .social {
+            flex-direction: column;
+            gap: 5px;
+            margin-top: 0;
+            padding-top: 0;
+
+            img {
+                margin-top: 0;
+            }
+        }
+    }
+}
+
 nav {
     position: relative;
+}
+
+@media only screen and (max-width: 300px) {
+    nav {
+        ul {
+            li {
+                a {
+                    font-size: 13px;
+                }
+            }
+        }
+    }
 }
