--- a/deploy/css/landing.scss
+++ b/deploy/css/landing.scss
@@ -56,6 +56,10 @@ h2 {
 }
 
 .landing-section {
+    &#contact {
+        margin-bottom: 80px;
+    }
+
     .container {
         gap: 10px;
     }
