--- a/public/css/footer.scss
+++ b/public/css/footer.scss
@@ -1,6 +1,6 @@
 footer {
-    background-color: #111;
-    margin-top: 80px;
+    width: 100%;
+    background-color: rgba(10, 10, 10, 0.8);
     position: relative;
     z-index: 10;
 
