--- a/deploy/css/landing.css
+++ b/deploy/css/landing.css
@@ -18,13 +18,13 @@ h2 {
   margin-bottom: 0;
 }
 
-.landing-section .container,
+.landing-section .info-container,
 #intro p,
 #unpaid-vs-paid td,
 #unpaid-vs-paid th {
   box-sizing: border-box;
 }
-.landing-section .container:not(th),
+.landing-section .info-container:not(th),
 #intro p:not(th),
 #unpaid-vs-paid td:not(th),
 #unpaid-vs-paid th:not(th) {
@@ -38,14 +38,14 @@ h2 {
   max-width: 500px !important;
 }
 
-.landing-section .container,
+.landing-section .info-container,
 #intro p,
 #unpaid-vs-paid td {
   background-color: var(--home-menu-color);
   color: #eee;
 }
 
-.landing-section .container,
+.landing-section .info-container,
 #intro p {
   box-sizing: border-box;
   padding: 15px 10px;
@@ -55,7 +55,9 @@ h2 {
 .landing-section#contact {
   margin-bottom: 80px;
 }
-.landing-section .container {
+.landing-section .info-container {
+  display: flex;
+  flex-direction: column;
   gap: 10px;
 }
 
