--- a/public/css/style.css
+++ b/public/css/style.css
@@ -270,7 +270,6 @@ img.separator {
 
 nav {
   width: 100%;
-  background-color: var(--bg-color);
   position: sticky;
   top: 0;
   z-index: 10;
@@ -281,6 +280,9 @@ nav#home-menu ul li {
 nav#home-menu ul li:hover {
   background-color: var(--accent-color);
   color: #222;
+}
+nav#reading-menu {
+  background-color: var(--bg-color);
 }
 nav#reading-menu ul {
   border-top: 6px solid var(--bg-color);
